--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ footer {
     justify-content: center;
 }
 
-footer div {
+footer .footer {
     font-size: 18px;
     padding-block: 20px;
     background-color: hsl(var(--bg-light) / 0.6);
